MMT-3017: Fixed the upper and lower sections of the MMT preview page to be aligned when the page is zoomed in or out

--- a/app/assets/stylesheets/layout/_grid.scss
+++ b/app/assets/stylesheets/layout/_grid.scss
@@ -100,6 +100,10 @@ section {
     background: $white;
     box-shadow: 0 -3px 3px rgba($true-black, 0.15);
     min-height: 300px;
+    max-width: 1725px;
+    margin: 0 auto;
+    //padding: 1rem;
+    position: relative;
   }
 }
 
