--- a/app/assets/stylesheets/overrides/_metadatapreview.scss
+++ b/app/assets/stylesheets/overrides/_metadatapreview.scss
@@ -1,7 +1,8 @@
 #metadata-preview{
   max-width: 1725px;
-  padding-right: 210px;
+  padding-right: 280px;
   padding-left: 30px;
+  position: relative;
 }
 
 th{
